2012-01-01  Jan Hubicka  <jh@suse.cz>

	PR rtl-optimization/51069
	* gcc.c-torture/compile/pr51069.c: New testcase.

2012-01-01  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/51683
	* gcc.dg/pr51683.c: New test.

2011-12-31  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51397
	* g++.dg/cpp0x/static_assert6.C: New.

2011-12-31  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/tree-ssa/vrp47: Pass -march=i586 for ia32 target.

2011-12-31  Thomas König  <tkoenig@gcc.gnu.org>

	PR fortran/51502
	* lib/gcc-dg.exp (scan-module-absence):  New function.
	* gfortran.dg/implicit_pure_2.f90:  New test.

2011-12-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51316
	* g++.dg/cpp0x/alignof4.C: New.

2011-12-29  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR testsuite/51702
	* gcc.dg/scal-to-vec1.c: If 32-bit powerpc-linux, add the
	-mabi=altivec option, which suppresses a warning message about
	passing vectors by reference.  The extra warning causes some tests
	to fail.
	* gcc.dg/scal-to-vec2.c: Likewise.
	* gcc.dg/Wstrict-aliasing-bogus-ref-all-2.c: Likewise.
	* gcc.dg/pr35442.c: Likewise.
	* gcc.dg/vector-compare-1.c: Likewise.
	* gcc.dg/vector-compare-2.c: Likewise.
	* gcc.dg/torture/pr36891.c: Likewise.

2012-12-29  Kai Tietz  <ktietz@redhat.com>

	* g++.dg/abi/bitfield3.C: Make sure test runs
	for windows targets without activated ms-bitfields option.

	* g++.old-deja/g++.brendan/new3.C: Adjust test for mingw
	targets to use static-version.
	* g++.old-deja/g++.abi/cxa_vec.C: Likewise.
	* g++.old-deja/g++.abi/arraynew.C: Likewise.
	* g++.old-deja/g++.eh/new1.C: Likewise.
	* g++.old-deja/g++.eh/new2.C: Likewise.

2011-12-29  Thomas Koenig  <tkoenig@gcc.gnu.org>

	* gfortran.dg/function_optimize_9.f90:  New test.

2011-12-27  Fabien Chêne  <fabien@gcc.gnu.org>

	PR c++/23211
	* g++.dg/template/using18.C: New.
	* g++.dg/template/using19.C: New.
	* g++.dg/template/nested3.C: Remove dg-message at instantiation.
	* g++.dg/template/crash13.C: Likewise.
