@@ -1,3 +1,8 @@
+2012-01-01  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/51723
+	* g++.dg/cpp0x/constexpr-delegating2.C: New.
+
 2012-01-01  Jan Hubicka  <jh@suse.cz>
 
 	PR rtl-optimization/51069
